2000-03-09  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/gnome/window-register.c (regRefresh): print
 	reversed-balanced account balances appropriately.

2000-03-07  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/scm/report/transaction-report.scm: a few bug fixes.

	* src/gnome/window-main.c (gnc_ui_delete_account): destroy the
 	windows *then* remove the account from the tree. Sometimes,
 	destroying the window can result in a refresh, which will do
 	strange things if we have already removed the account from the
 	tree.

2000-03-06  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/gnome/window-reconcile.c (recnRefresh): resize the window

	* src/FileDialog.c (gncPostFileOpen): set the busy cursor while
 	reading the file.
	(gncFileSave): ditto.

	* src/register/gnome/gnucash-sheet.c
 	(gnucash_sheet_update_adjustments): set the step increment.

2000-03-06  Heath Martin  <martinh@pegasus.cc.ucf.edu>

	* src/register/gnome/gnucash-style.c
 	(gnucash_sheet_style_set_col_width): Adjust the overall style
 	width, too.

	* src/register/gnome/gnucash-header.c
 	(gnucash_header_auto_resize_column): Resize the window to fit the
 	register.
	(gnucash_header_event): ditto on a column resize.

2000-03-05  Rob Browning  <rlb@cs.utexas.edu>

	* src/scm/report/transaction-report.scm: add support for depend
	mechanism.

	* src/scm/report/hello-world.scm: add support for depend
	mechanism.

	* src/scm/report/folio.scm: add support for depend mechanism.

	* src/scm/report/balance-and-pnl.scm: add support for depend
	mechanism.

	* src/scm/report/average-balance.scm: add support for depend
	mechanism.

	* src/scm/report.scm (gnc:report-menu-setup): fixed minor
	non-r5rsism (defines must be at the beginning of a <body>).

	* src/scm/report/report-list.scm: new file.  This is where all of
	the reports that should be loaded at startup should be listed.

	* src/scm/main.scm (gnc:startup): don't autoscan/load from the